--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,11 +3,15 @@
 @import "./base/base";
 @import "./base/mixins";
 @import "./base/typography";
+@import "./base/utilites";
 
 //COMPONENTS
 @import "./components/header";
 @import "./components/carousel";
 @import "./components/footer";
+@import "./components/main";
+@import "./components/info";
+@import "./components/gridbox";
 
 //PAGES
 @import "./pages/home-page";
