--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -30,6 +30,7 @@
                 font-size: $header__nav__link_font_size;
                 text-transform: uppercase;
                 text-decoration: none;
+                font-weight: 700;
 
                 &:not(:last-child) {
                     margin-right: 3.6rem;
