--- a/styles/components/_carousel.scss
+++ b/styles/components/_carousel.scss
@@ -1,36 +1,35 @@
-.section-carousel {
-    grid-column: full-start / full-end;
-    grid-row: 2 / 3;
-    position: relative;
+.carousel {
+  grid-column: full-start / full-end;
+  grid-row: 2 / 3;
+  position: relative;
 
-    &::before {
-        content: "";
-        height: 100%;
-        width: 100%;
+  &::before {
+    content: "";
+    height: 100%;
+    width: 100%;
 
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
 
-        background-image: url("../../assets/img/JohnCleeseEricIdle.png");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: 50%;
-    }
+    background-image: url("../../assets/img/JohnCleeseEricIdle.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50%;
+  }
 
-    &::after {
-        content: "";
-        height: 100%;
-        width: 100%;
+  &::after {
+    content: "";
+    height: 100%;
+    width: 100%;
 
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
 
-        background-color: rgba(88, 99, 248, 0.5);
-    }
-
-    
+    background-color: rgba(88, 99, 248, 0.5);
+  }
 }
+
