--- a/styles/base/_utilites.scss
+++ b/styles/base/_utilites.scss
@@ -1,13 +1,22 @@
 //MARGINS FOR CARD_STORIES
-
 .m-b-1 {
     margin-top: 2.1rem;
     margin-bottom: 7.2rem;
+
+    @include respond(tab-land-sm) {
+        margin-top: 2rem;
+        margin-bottom: 3.2rem;
+    }
 }
 
 .m-b-2 {
     margin-top: 2.1rem;
     margin-bottom: 4rem;
+
+    @include respond(tab-land-sm) {
+        margin-top: 2rem;
+        margin-bottom: 3.2rem;
+    }
 }
 
 .m-b-3 {
@@ -20,6 +29,8 @@
     margin-bottom: 5.5rem;
 }
 
+//text
 .text-left {
     text-align: left;
 }
+
