--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -15,6 +15,8 @@
 
             & > p {
                 color: $medium-grey-color;
+                text-align: center;
+                max-width: 24rem;
             }
 
             display: flex;
