--- a/styles/components/_gridbox.scss
+++ b/styles/components/_gridbox.scss
@@ -8,6 +8,11 @@
 
     margin: 5.2rem 0 7.6rem;
 
+    @include respond(tab-land-sm) {
+        grid-template-columns: repeat(2, 28.8rem);
+        grid-template-rows: repeat(2, 55.7rem);
+    }
+
     &__img {
         width: 100%;
     }
@@ -23,6 +28,14 @@
 
         &__details {
             padding: 2.15rem 4.2rem 5.4rem 4.2rem;
+
+            &:nth-child(2) {
+                padding: 2.15rem 1rem 1.4rem 4.2rem;
+            }
+
+            @include respond(tab-land-sm) {
+                padding: 2.15rem 3.2rem 5.4rem 3.2rem;
+            }
 
             &__headings {
                 text-align: center;
