--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -1,17 +1,22 @@
 .section-main {
     grid-column: center-start / center-end;
     grid-row: 3 / 4;
- 
+
     padding: 5.6rem 10.4rem;
+    margin: 0 4rem;
+
+    @include respond(tab-land-sm) {
+        padding: 5.4rem 4.8rem;
+    }
 
     box-shadow: $box-shadow-center-box;
     border-radius: 4px;
 
     height: 105%;
-    
+
     position: relative;
     z-index: 10;
-    
+
     background-color: $white-color;
     transform: translateY(-4rem);
 
