--- a/styles/base/_utilites.scss
+++ b/styles/base/_utilites.scss
@@ -3,20 +3,20 @@
     margin-top: 2.1rem;
     margin-bottom: 7.2rem;
 
-    @include respond(tab-land-sm) {
-        margin-top: 2rem;
-        margin-bottom: 3.2rem;
-    }
+    // @include respond(tab-land-sm) {
+    //     margin-top: 2rem;
+    //     margin-bottom: 3.2rem;
+    // }
 }
 
 .m-b-2 {
     margin-top: 2.1rem;
     margin-bottom: 4rem;
 
-    @include respond(tab-land-sm) {
-        margin-top: 2rem;
-        margin-bottom: 3.2rem;
-    }
+    // @include respond(tab-land-sm) {
+    //     margin-top: 2rem;
+    //     margin-bottom: 3.2rem;
+    // }
 }
 
 .m-b-3 {
