--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -11,12 +11,14 @@
             & > h4 {
                 margin-bottom: 1rem;
                 color: $white_color;
+                font-weight: 500;
             }
 
             & > p {
                 color: $medium-grey-color;
                 text-align: center;
                 max-width: 24rem;
+                font-weight: 100;
             }
 
             display: flex;
