--- a/styles/components/_gridbox.scss
+++ b/styles/components/_gridbox.scss
@@ -1,17 +1,12 @@
 .gridbox {
     display: grid;
-    grid-template-columns: repeat(2, 36.6rem);
+    grid-template-columns: repeat(2, 36rem);
     grid-template-rows: repeat(2, 61.1rem);
     justify-content: center;
     column-gap: 3.2rem;
     row-gap: 3.6rem;
 
     margin: 5.2rem 0 7.6rem;
-
-    @include respond(tab-land-sm) {
-        grid-template-columns: repeat(2, 28.8rem);
-        grid-template-rows: repeat(2, 55.7rem);
-    }
 
     &__img {
         width: 100%;
@@ -29,10 +24,6 @@
         &__details {
             padding: 2.15rem 4.2rem 5.4rem 4.2rem;
 
-            &:nth-child(2) {
-                padding: 2.15rem 1rem 1.4rem 4.2rem;
-            }
-
             @include respond(tab-land-sm) {
                 padding: 2.15rem 3.2rem 5.4rem 3.2rem;
             }
@@ -44,11 +35,14 @@
                     font-size: 1.2rem;
                     color: $blue_color;
                     text-transform: uppercase;
+                    font-family: 'Poppins', sans-serif;
                 }
 
                 &__heading {
                     font-size: 2rem;
                     color: $purple-color;
+                    font-family: 'Poppins', sans-serif;
+                    font-weight: 500;
 
                     &::after {
                         margin-top: 1.55rem;
@@ -69,6 +63,7 @@
                 color: $medium-grey-color;
                 font-size: 1.4rem;
                 max-width: 27.8rem;
+                font-family: 'Roboto', sans-serif;
             }
 
             &__btn {
@@ -77,7 +72,9 @@
 
                 background-color: $white_color;
                 color: $red-color;
-                font-weight: 500;
+
+                font-family: 'Poppins', sans-serif;
+                font-weight: 400;
                 font-size: 1.6rem;
 
                 outline: none;
