1024px and 768 px rwd done

--- a/styles/base/_utilites.scss
+++ b/styles/base/_utilites.scss
@@ -3,30 +3,43 @@
     margin-top: 2.1rem;
     margin-bottom: 7.2rem;
 
-    // @include respond(tab-land-sm) {
-    //     margin-top: 2rem;
-    //     margin-bottom: 3.2rem;
-    // }
+    @include respond(tab-land-sm) {
+        margin-top: 2rem;
+        margin-bottom: 3.2rem;
+    }
+
+    @include respond(tab-md) {
+        margin-bottom: 4rem;
+    }
 }
 
 .m-b-2 {
     margin-top: 2.1rem;
     margin-bottom: 4rem;
 
-    // @include respond(tab-land-sm) {
-    //     margin-top: 2rem;
-    //     margin-bottom: 3.2rem;
-    // }
+    @include respond(tab-land-sm) {
+        margin-top: 2rem;
+        margin-bottom: 3.2rem;
+    }
 }
 
 .m-b-3 {
     margin-top: 2.1rem;
     margin-bottom: 3.79rem;
+
+    @include respond(tab-md) {
+        margin-bottom: 3.2rem;
+    }
 }
 
 .m-b-4 {
     margin-top: 2.1rem;
     margin-bottom: 5.5rem;
+
+    @include respond(tab-md) {
+        margin-bottom: 5.3rem;
+
+    }
 }
 
 //text
@@ -34,3 +47,23 @@
     text-align: left;
 }
 
+
+//gridbox-card-detauls 
+.g-c-d {
+    @include respond(tab-md) {
+        padding: 1.4rem 3.2rem 3.2rem 3.2rem !important;
+    }
+}
+
+.card-padding-custom {
+    @include respond(tab-md) {
+        padding: 2.15rem 3.2rem 0rem 3.2rem !important;
+    }
+}
+
+//margin buttons 
+.m-button-b {
+    @include respond(tab-md) {
+        margin-bottom: 4.5rem !important;
+    }
+}
