--- a/styles/components/_gridbox.scss
+++ b/styles/components/_gridbox.scss
@@ -8,6 +8,13 @@
 
     margin: 5.2rem 0 7.6rem;
 
+    @include respond(tab-md) {
+        grid-template-columns: repeat(2, 28.8rem);
+        grid-template-rows: repeat(2, 55.7rem);
+
+        row-gap: 3.8rem;
+    }
+
     &__img {
         width: 100%;
     }
@@ -17,6 +24,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        overflow: hidden;
 
         border-radius: 0px 0px 4px 4px;
         box-shadow: 0px 0px 10px #00000029;
@@ -26,6 +34,10 @@
 
             @include respond(tab-land-sm) {
                 padding: 2.15rem 3.2rem 5.4rem 3.2rem;
+            }
+
+            @include respond(tab-md) {
+                padding: 2.15rem 3.2rem 3.2rem 3.2rem;
             }
 
             &__headings {
