--- a/styles/components/_info.scss
+++ b/styles/components/_info.scss
@@ -14,6 +14,14 @@
 
         &--w436 {
             max-width: 43.6rem;
+
+            @include respond(tab-md) {
+                font-size: 2.4rem !important;
+            }
+        }
+
+        @include respond(tab-md) {
+            font-size: 2rem;
         }
     }
 
@@ -23,5 +31,9 @@
 
         font-weight: 100;
         font-family: 'Roboto', sans-serif;
+
+        @include respond(tab-md) {
+            font-size: 1.4rem;
+        }
     }
 }
