--- a/styles/main.css
+++ b/styles/main.css
@@ -39,9 +39,35 @@ body {
   margin-bottom: 7.2rem;
 }
 
+@media only screen and (max-width: 64em) {
+  .m-b-1 {
+    margin-top: 2rem;
+    margin-bottom: 3.2rem;
+  }
+}
+
+@media only screen and (max-width: 32.5em) {
+  .m-b-1 {
+    margin-bottom: 4rem;
+  }
+}
+
+@media only screen and (max-width: 48em) {
+  .m-b-1 {
+    margin-bottom: 4rem;
+  }
+}
+
 .m-b-2 {
   margin-top: 2.1rem;
   margin-bottom: 4rem;
+}
+
+@media only screen and (max-width: 64em) {
+  .m-b-2 {
+    margin-top: 2rem;
+    margin-bottom: 3.2rem;
+  }
 }
 
 .m-b-3 {
@@ -49,13 +75,73 @@ body {
   margin-bottom: 3.79rem;
 }
 
+@media only screen and (max-width: 32.5em) {
+  .m-b-3 {
+    margin-bottom: 3.2rem;
+  }
+}
+
+@media only screen and (max-width: 48em) {
+  .m-b-3 {
+    margin-bottom: 3.2rem;
+  }
+}
+
 .m-b-4 {
   margin-top: 2.1rem;
   margin-bottom: 5.5rem;
 }
 
+@media only screen and (max-width: 32.5em) {
+  .m-b-4 {
+    margin-bottom: 5.3rem;
+  }
+}
+
+@media only screen and (max-width: 48em) {
+  .m-b-4 {
+    margin-bottom: 5.3rem;
+  }
+}
+
 .text-left {
   text-align: left;
+}
+
+@media only screen and (max-width: 32.5em) {
+  .g-c-d {
+    padding: 1.4rem 3.2rem 3.2rem 3.2rem !important;
+  }
+}
+
+@media only screen and (max-width: 48em) {
+  .g-c-d {
+    padding: 1.4rem 3.2rem 3.2rem 3.2rem !important;
+  }
+}
+
+@media only screen and (max-width: 32.5em) {
+  .card-padding-custom {
+    padding: 2.15rem 3.2rem 0rem 3.2rem !important;
+  }
+}
+
+@media only screen and (max-width: 48em) {
+  .card-padding-custom {
+    padding: 2.15rem 3.2rem 0rem 3.2rem !important;
+  }
+}
+
+@media only screen and (max-width: 32.5em) {
+  .m-button-b {
+    margin-bottom: 4.5rem !important;
+  }
+}
+
+@media only screen and (max-width: 48em) {
+  .m-button-b {
+    margin-bottom: 4.5rem !important;
+  }
 }
 
 .section-header {
@@ -223,7 +309,7 @@ body {
   -ms-grid-row-span: 1;
   grid-row: 3 / 4;
   padding: 5.6rem 10.4rem;
-  margin: 0 4rem;
+  margin: 0 16rem;
   -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.16);
   border-radius: 4px;
@@ -251,6 +337,21 @@ body {
 @media only screen and (max-width: 64em) {
   .section-main {
     padding: 5.4rem 4.8rem;
+    margin: 0 3.2rem;
+  }
+}
+
+@media only screen and (max-width: 32.5em) {
+  .section-main {
+    max-width: 70.4rem;
+    padding: 3rem 10.4rem;
+  }
+}
+
+@media only screen and (max-width: 48em) {
+  .section-main {
+    max-width: 70.4rem;
+    padding: 3rem 10.4rem;
   }
 }
 
@@ -283,11 +384,47 @@ body {
   max-width: 43.6rem;
 }
 
+@media only screen and (max-width: 32.5em) {
+  .info__heading--w436 {
+    font-size: 2.4rem !important;
+  }
+}
+
+@media only screen and (max-width: 48em) {
+  .info__heading--w436 {
+    font-size: 2.4rem !important;
+  }
+}
+
+@media only screen and (max-width: 32.5em) {
+  .info__heading {
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (max-width: 48em) {
+  .info__heading {
+    font-size: 2rem;
+  }
+}
+
 .info__paragraph {
   max-width: 75.2rem;
   color: #231841;
   font-weight: 100;
   font-family: 'Roboto', sans-serif;
+}
+
+@media only screen and (max-width: 32.5em) {
+  .info__paragraph {
+    font-size: 1.4rem;
+  }
+}
+
+@media only screen and (max-width: 48em) {
+  .info__paragraph {
+    font-size: 1.4rem;
+  }
 }
 
 .gridbox {
@@ -304,6 +441,26 @@ body {
           column-gap: 3.2rem;
   row-gap: 3.6rem;
   margin: 5.2rem 0 7.6rem;
+}
+
+@media only screen and (max-width: 32.5em) {
+  .gridbox {
+    -ms-grid-columns: (28.8rem)[2];
+        grid-template-columns: repeat(2, 28.8rem);
+    -ms-grid-rows: (55.7rem)[2];
+        grid-template-rows: repeat(2, 55.7rem);
+    row-gap: 3.8rem;
+  }
+}
+
+@media only screen and (max-width: 48em) {
+  .gridbox {
+    -ms-grid-columns: (28.8rem)[2];
+        grid-template-columns: repeat(2, 28.8rem);
+    -ms-grid-rows: (55.7rem)[2];
+        grid-template-rows: repeat(2, 55.7rem);
+    row-gap: 3.8rem;
+  }
 }
 
 .gridbox__img {
@@ -324,6 +481,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow: hidden;
   border-radius: 0px 0px 4px 4px;
   -webkit-box-shadow: 0px 0px 10px #00000029;
           box-shadow: 0px 0px 10px #00000029;
@@ -336,6 +494,18 @@ body {
 @media only screen and (max-width: 64em) {
   .gridbox__card__details {
     padding: 2.15rem 3.2rem 5.4rem 3.2rem;
+  }
+}
+
+@media only screen and (max-width: 32.5em) {
+  .gridbox__card__details {
+    padding: 2.15rem 3.2rem 3.2rem 3.2rem;
+  }
+}
+
+@media only screen and (max-width: 48em) {
+  .gridbox__card__details {
+    padding: 2.15rem 3.2rem 3.2rem 3.2rem;
   }
 }
 
