--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,6 +12,7 @@
 @import "./components/main";
 @import "./components/info";
 @import "./components/gridbox";
+@import "./components/navigation";
 
 //PAGES
 @import "./pages/home-page";
