--- a/styles/main.css
+++ b/styles/main.css
@@ -143,7 +143,9 @@ body {
   max-width: 1200px;
   background-color: transparent;
   position: relative;
-  z-index: 100;
+  z-index: 300;
+  -webkit-box-shadow: 0px 3px 6px #00000029;
+          box-shadow: 0px 3px 6px #00000029;
 }
 
 @media only screen and (min-width: 521.5px) {
@@ -171,13 +173,41 @@ body {
 }
 
 .section-header .header li a {
-  display: block;
+  display: inline;
   padding: 20px 20px;
   text-decoration: none;
   font-size: 1.4rem;
   font-weight: 700;
   text-transform: uppercase;
   color: #8D8D8D;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.section-header .header li a p::after {
+  margin-top: .1rem;
+  content: "";
+  width: 0%;
+  background-color: #FF4858;
+  height: .2rem;
+  display: block;
+  opacity: 1;
+  -webkit-transition: .2s ease-in-out all;
+  transition: .2s ease-in-out all;
+}
+
+.section-header .header li a p:hover::after {
+  width: 100%;
+  opacity: 1;
 }
 
 .section-header .header .menu-btn:hover {
@@ -207,6 +237,7 @@ body {
   -webkit-transition: max-height 0.2s ease-out;
   transition: max-height 0.2s ease-out;
   margin-right: 10rem;
+  position: relative;
 }
 
 @media only screen and (max-width: 1013px) {
@@ -223,6 +254,22 @@ body {
     -webkit-transform: translateY(-17px);
             transform: translateY(-17px);
   }
+}
+
+.section-header .header .menu::before {
+  content: "";
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  left: 0;
+  top: 0;
+  width: 200%;
+  height: 3rem;
+  background-color: transparent;
+  border: none;
+  display: inline-block;
+  -webkit-box-shadow: 0px 3px 6px #00000029;
+          box-shadow: 0px 3px 6px #00000029;
 }
 
 .section-header .header .menu-icon {
