--- a/styles/base/_utilites.scss
+++ b/styles/base/_utilites.scss
@@ -60,6 +60,20 @@ gridbox-card-detauls .g-c-d {
     }
 }
 
+//paddings for subpages
+.padding-zero {
+    padding: 5.4rem 4.8rem !important;
+}
+
+//custom height {
+.h-15 {
+    height: 115% !important;
+}
+
+.h-109 {
+    height: 109% !important;
+}
+
 //margin buttons 
 .m-button-b {
     @include respond(tab-md) {
