--- a/styles/main.css
+++ b/styles/main.css
@@ -102,6 +102,18 @@ body {
   }
 }
 
+.padding-zero {
+  padding: 5.4rem 4.8rem !important;
+}
+
+.h-15 {
+  height: 115% !important;
+}
+
+.h-109 {
+  height: 109% !important;
+}
+
 @media only screen and (max-width: 48em) {
   .m-button-b {
     margin-bottom: 4.5rem !important;
